--- a/src/app/HiringManagement/hiring-center/hiring-center.component.html
+++ b/src/app/HiringManagement/hiring-center/hiring-center.component.html
@@ -285,7 +285,7 @@
                                                     <td class="status" *ngIf="item.STATUS==0 || item.STATUS==4"><span class="badge bg-info-subtle text-blue  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
                                                     <td class="status" *ngIf="item.STATUS==2"><span class="badge badge-height bg-warning-subtle text-warning  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
                                                     <td class="status" *ngIf="item.STATUS==1"><span class="badge bg-success-subtle text-success  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
-                                                    <td class="status" *ngIf="item.STATUS==6 || item.STATUS==7 || item.STATUS==3"><span class="badge bg-danger-subtle text-danger  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
+                                                    <td class="status" *ngIf="item.STATUS==6 || item.STATUS==7 || item.STATUS==3 || item.STATUS==5"><span class="badge bg-danger-subtle text-danger  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
                                                     
                                                     <td>
                                                         <ul class="list-inline hstack gap-2 mb-0"*ngIf="item.STATUS==0">
